--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             padding: 0;
             font-family: 'Inter', sans-serif;
             color: #fff; /* Default text color */
-            /* Control overflow precisely. 'hidden' on html prevents scrollbar from appearing during initial load/fade-in */
+            /* Control overflow precisely: hide all browser-level scrollbars */
             overflow: hidden; 
         }
 
@@ -38,7 +38,7 @@
         /* Fade-in effect on page load */
         body.fade-in {
             animation: fadeIn 0.5s ease-out forwards;
-            overflow-y: auto; /* Enable scroll after fade-in completes on the body */
+            /* No overflow-y: auto here to ensure only game-library scrolls */
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -99,6 +99,8 @@
             flex-direction: column; /* Stack content vertically */
             justify-content: center; /* Center vertically */
             align-items: center; /* Center horizontally */
+            text-align: center; /* Ensure text is centered within the card */
+            padding: 1rem; /* Add padding to card content */
         }
         .game-card:hover {
             border-color: #6366f1; /* Indigo-500 on hover */
@@ -109,8 +111,8 @@
             flex-grow: 1; /* Allow the game library to grow and take available space */
             overflow-y: auto; /* Enable vertical scrolling for the game cards */
             /* Max height calculation: 100vh - (header_height + auth_status + search_bar + footer_height + margins/paddings) */
-            /* This is a more precise calculation. Adjusted based on standard element heights. */
-            max-height: calc(100vh - 270px); /* Adjusted to accommodate header, auth, search, and footer */
+            /* Adjusted to accommodate header (h1, p), auth status, search bar, and footer */
+            max-height: calc(100vh - 280px); /* Slightly increased fixed height estimate */
             width: 100%; /* Ensure it takes full width of its parent */
             padding-bottom: 1rem; /* Add some padding at the bottom for scroll comfort */
         }
@@ -217,74 +219,6 @@
                     </p>
                     <a href="hangman.html" class="play-button px-3 py-1 bg-blue-600 text-white font-bold rounded-lg shadow-lg hover:bg-blue-700 text-sm transition-all duration-300 ease-in-out transform hover:scale-105" data-click-sound="buttonClick">
                         Play Now
-                    </a>
-                </div>
-            </div>
-            <!-- Adding more dummy game cards to ensure scroll functionality -->
-            <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="newGame1">
-                <div class="game-card-content flex flex-col justify-center items-center h-full text-center">
-                    <div class="game-card-title text-xl">New Game 1</div>
-                    <p class="game-card-description text-xs text-gray-400">
-                        Placeholder for exciting game!
-                    </p>
-                    <a href="#" class="coming-soon-button px-3 py-1 bg-gray-500 text-white font-bold rounded-lg shadow-lg text-sm" data-click-sound="buttonClick">
-                        Coming Soon
-                    </a>
-                </div>
-            </div>
-            <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="newGame2">
-                <div class="game-card-content flex flex-col justify-center items-center h-full text-center">
-                    <div class="game-card-title text-xl">New Game 2</div>
-                    <p class="game-card-description text-xs text-gray-400">
-                        More fun with this upcoming game!
-                    </p>
-                    <a href="#" class="coming-soon-button px-3 py-1 bg-gray-500 text-white font-bold rounded-lg shadow-lg text-sm" data-click-sound="buttonClick">
-                        Coming Soon
-                    </a>
-                </div>
-            </div>
-            <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="newGame3">
-                <div class="game-card-content flex flex-col justify-center items-center h-full text-center">
-                    <div class="game-card-title text-xl">New Game 3</div>
-                    <p class="game-card-description text-xs text-gray-400">
-                        Another awesome game is on its way!
-                    </p>
-                    <a href="#" class="coming-soon-button px-3 py-1 bg-gray-500 text-white font-bold rounded-lg shadow-lg text-sm" data-click-sound="buttonClick">
-                        Coming Soon
-                    </a>
-                </div>
-            </div>
-             <!-- More dummy cards to ensure scroll functionality -->
-            <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="newGame4">
-                <div class="game-card-content flex flex-col justify-center items-center h-full text-center">
-                    <div class="game-card-title text-xl">New Game 4</div>
-                    <p class="game-card-description text-xs text-gray-400">
-                        Yet another game!
-                    </p>
-                    <a href="#" class="coming-soon-button px-3 py-1 bg-gray-500 text-white font-bold rounded-lg shadow-lg text-sm" data-click-sound="buttonClick">
-                        Coming Soon
-                    </a>
-                </div>
-            </div>
-            <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="newGame5">
-                <div class="game-card-content flex flex-col justify-center items-center h-full text-center">
-                    <div class="game-card-title text-xl">New Game 5</div>
-                    <p class="game-card-description text-xs text-gray-400">
-                        The fun never stops!
-                    </p>
-                    <a href="#" class="coming-soon-button px-3 py-1 bg-gray-500 text-white font-bold rounded-lg shadow-lg text-sm" data-click-sound="buttonClick">
-                        Coming Soon
-                    </a>
-                </div>
-            </div>
-            <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="newGame6">
-                <div class="game-card-content flex flex-col justify-center items-center h-full text-center">
-                    <div class="game-card-title text-xl">New Game 6</div>
-                    <p class="game-card-description text-xs text-gray-400">
-                        So many games!
-                    </p>
-                    <a href="#" class="coming-soon-button px-3 py-1 bg-gray-500 text-white font-bold rounded-lg shadow-lg text-sm" data-click-sound="buttonClick">
-                        Coming Soon
                     </a>
                 </div>
             </div>
@@ -785,21 +719,6 @@
                     title: "Hangman",
                     description: "Guess the hidden word one letter at a time to save the stick figure from being hanged. Each wrong guess adds another part to the gallows! Be careful with your guesses!",
                     rules: "Guess letters. For each incorrect guess, a part of the hangman is drawn. You lose if the hangman is complete before you guess the word."
-                },
-                "newGame1": {
-                    title: "New Game 1",
-                    description: "This is a placeholder for another exciting game to come! Stay tuned for updates and get ready for new challenges.",
-                    rules: "Rules for New Game 1 will be revealed soon!"
-                },
-                "newGame2": {
-                    title: "New Game 2",
-                    description: "Get ready for more fun with this upcoming game! It promises unique gameplay and endless entertainment.",
-                    rules: "Rules for New Game 2 will be revealed soon!"
-                },
-                "newGame3": {
-                    title: "New Game 3",
-                    description: "Another awesome game is on its way! Prepare for an unforgettable adventure and new gaming experiences.",
-                    rules: "Rules for New Game 3 will be revealed soon!"
                 }
             };
 
