--- a/index.html
+++ b/index.html
@@ -22,23 +22,24 @@
             overflow: hidden; 
         }
 
-        /* Body background image and initial state */
+        /* Body as a flex container to manage full height and internal scrolling */
         body {
             background-image: url('https://i.imgur.com/qmJKSRj.jpeg'); /* Your photo link */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            background-color: #0d1117; /* Fallback dark background */
+            display: flex; /* Make body a flex container */
+            flex-direction: column; /* Stack children vertically */
             position: relative; /* Needed for z-index context of content-wrapper */
             opacity: 0; /* Initially hide to prevent FOUC and enable fade-in */
             transition: opacity 0.5s ease-in-out; /* Global transition for fade */
-            background-color: #0d1117; /* Fallback background color, for consistency */
         }
 
         /* Fade-in effect on page load */
         body.fade-in {
             animation: fadeIn 0.5s ease-out forwards;
-            /* No overflow-y: auto here to ensure only game-library scrolls */
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -77,16 +78,19 @@
             100% { background-position: 0% 50%; }
         }
 
-        /* Ensure main content is above the overlay */
+        /* Ensure main content is above the overlay and handles its own scrolling */
         .content-wrapper {
             position: relative;
             z-index: 1; /* Ensure content is above the overlay */
             background-color: transparent; /* Ensure it's transparent to see background */
-            min-height: 100vh; /* Make content wrapper take full viewport height */
             display: flex; /* Use flexbox for layout */
             flex-direction: column; /* Stack children vertically */
             align-items: center; /* Center horizontally */
             padding: 1rem; /* Tailwind p-4 */
+            flex-grow: 1; /* Allow content-wrapper to take available height */
+            overflow-y: auto; /* THIS IS WHERE THE MAIN SCROLL WILL BE */
+            /* Add padding-bottom to ensure content doesn't get hidden under the footer */
+            padding-bottom: 2rem; 
         }
         
         /* Apply basic card styling universally to game cards */
@@ -106,13 +110,11 @@
             border-color: #6366f1; /* Indigo-500 on hover */
         }
 
-        /* The main game library area needs to be flexible to take up space and scroll */
+        /* The game-library itself no longer needs overflow-y or fixed max-height */
         .game-library {
-            flex-grow: 1; /* Allow the game library to grow and take available space */
-            overflow-y: auto; /* Enable vertical scrolling for the game cards */
-            /* Max height calculation: 100vh - (header_height + auth_status + search_bar + footer_height + margins/paddings) */
-            /* Adjusted to accommodate header (h1, p), auth status, search bar, and footer */
-            max-height: calc(100vh - 280px); /* Slightly increased fixed height estimate */
+            /* flex-grow: 1; */ /* Removed as content-wrapper now handles scroll */
+            overflow-y: visible; /* Content within game-library will now flow into content-wrapper's scroll */
+            /* max-height: calc(100vh - 280px); */ /* Removed as content-wrapper now handles scroll */
             width: 100%; /* Ensure it takes full width of its parent */
             padding-bottom: 1rem; /* Add some padding at the bottom for scroll comfort */
         }
@@ -131,6 +133,9 @@
         #email-verification-status span {
             color: #E2E8F0; /* Brighter gray for better contrast */
             text-shadow: 0 1px 5px rgba(0, 0, 0, 0.4); /* Add shadow for readability */
+        }
+        footer {
+            flex-shrink: 0; /* Prevent footer from shrinking and ensure it stays at the bottom */
         }
     </style>
 
