--- a/hangman.html
+++ b/hangman.html
@@ -26,7 +26,7 @@
 
         <div class="game-area flex flex-col md:flex-row items-center justify-center gap-8 w-full">
             <!-- Hangman Drawing Area -->
-            <div id="hangman-drawing-area" class="relative w-48 h-64 md:w-64 md:h-80 bg-gray-200 rounded-lg shadow-inner flex items-end justify-center overflow-hidden">
+            <div id="hangman-drawing-area" class="relative w-48 h-64 md:w-64 md:h-80 bg-gray-700 rounded-lg shadow-inner flex items-end justify-center overflow-hidden border-2 border-gray-600">
                 <svg id="hangman-svg" class="w-full h-full" viewBox="0 0 200 250" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round">
                     <!-- Gallow Base -->
                     <line x1="10" y1="240" x2="100" y2="240" class="hangman-part" id="base"></line>
@@ -49,12 +49,12 @@
 
             <!-- Game Info & Controls -->
             <div class="game-controls-wrapper flex flex-col items-center justify-center gap-4 w-full md:w-auto">
-                <div id="word-display" class="text-4xl md:text-5xl font-black tracking-widest bg-gray-800 p-4 rounded-lg shadow-xl mb-4 min-w-[280px] text-center">
+                <div id="word-display" class="text-4xl md:text-5xl font-black tracking-widest bg-gray-800 p-4 rounded-lg shadow-xl mb-4 min-w-[280px] text-center border-2 border-gray-600">
                     <!-- Word will be displayed here -->
                 </div>
 
                 <div id="guessed-letters" class="text-xl text-gray-400 mb-4 h-6">
-                    Correct: <span id="correct-guesses" class="font-bold text-green-400"></span> / Wrong: <span id="wrong-guesses" class="font-bold text-red-400"></span>
+                    Correct: <span id="correct-guesses" class="font-bold text-green-400">0</span> / Wrong: <span id="wrong-guesses" class="font-bold text-red-400">0</span>
                 </div>
 
                 <div id="alphabet-buttons" class="grid grid-cols-7 gap-2 max-w-md w-full">
@@ -64,7 +64,7 @@
         </div>
 
         <!-- Game messages and reset button -->
-        <div id="game-message" class="hidden absolute inset-0 bg-gray-900 bg-opacity-75 flex flex-col items-center justify-center rounded-lg z-20 p-4 backdrop-blur-sm">
+        <div id="game-message" class="hidden absolute inset-0 bg-gray-900 bg-opacity-75 flex flex-col items-center justify-center rounded-lg z-20 p-4">
             <p id="game-status" class="text-3xl font-bold mb-6 text-white text-center"></p>
             <button id="restart-button" class="px-6 py-3 bg-indigo-600 text-white font-bold rounded-lg shadow-lg hover:bg-indigo-700 transition-all duration-300 ease-in-out transform hover:scale-105">
                 Play Again
@@ -86,7 +86,7 @@
 
 
         <!-- Slide-out Profile menu -->
-        <div id="profile-menu" class="profile-menu fixed top-0 right-0 h-full w-64 bg-gray-800/70 text-white p-6 transform translate-x-full transition-transform duration-300 ease-in-out z-70 flex flex-col backdrop-blur-sm">
+        <div id="profile-menu" class="profile-menu fixed top-0 right-0 h-full w-64 bg-gray-800 text-white p-6 transform translate-x-full transition-transform duration-300 ease-in-out z-70 flex flex-col">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-2xl font-bold">My Profile</h2>
                 <button id="close-profile-menu-button" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button>
@@ -106,7 +106,7 @@
         </div>
 
         <!-- Slide-out settings menu -->
-        <div id="settings-menu" class="settings-menu fixed top-0 right-0 h-full w-64 bg-gray-800/70 text-white p-6 transform translate-x-full transition-transform duration-300 ease-in-out z-60 flex flex-col backdrop-blur-sm">
+        <div id="settings-menu" class="settings-menu fixed top-0 right-0 h-full w-64 bg-gray-800 text-white p-6 transform translate-x-full transition-transform duration-300 ease-in-out z-60 flex flex-col">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-2xl font-bold">Settings</h2>
                 <button id="close-settings-menu-button" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button>
@@ -149,7 +149,7 @@
         </div>
 
         <!-- Slide-out Achievements Menu -->
-        <div id="achievements-menu" class="achievements-menu fixed top-0 right-0 h-full w-64 bg-gray-800/70 text-white p-6 transform translate-x-full transition-transform duration-300 ease-in-out z-55 flex flex-col backdrop-blur-sm">
+        <div id="achievements-menu" class="achievements-menu fixed top-0 right-0 h-full w-64 bg-gray-800 text-white p-6 transform translate-x-full transition-transform duration-300 ease-in-out z-55 flex flex-col">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-2xl font-bold">Achievements</h2>
                 <button id="close-achievements-menu-button" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button>
@@ -162,7 +162,7 @@
 
     <!-- Modal for game information -->
     <div id="info-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center z-50 p-4">
-        <div class="bg-gray-800/70 text-gray-300 p-6 rounded-lg shadow-xl max-w-sm w-full relative backdrop-blur-sm">
+        <div class="bg-gray-800 text-gray-300 p-6 rounded-lg shadow-xl max-w-sm w-full relative">
             <h2 class="text-2xl font-bold mb-4 text-white">How to Play Hangman</h2>
             <p class="mb-2">Guess letters to reveal the hidden word. Each wrong guess brings you closer to defeat!</p>
             <p class="mb-4">Try to guess the word before the stick figure is fully drawn.</p>
