--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@
             <button id="toggle-auth-mode" class="mt-4 text-blue-400 hover:underline text-sm" data-click-sound="buttonClick">
                 Don't have an account? Register
             </button>
-            <button id="google-sign-in-button" class="mt-4 flex items-center justify-center gap-2 w-full px-6 py-3 bg-red-600 text-white font-bold rounded-lg shadow-lg hover:bg-red-700 transition-all duration-300 ease-in-out transform hover:scale-105" data-click-sound="buttonClick">
-                <i class="fab fa-google"></i> Sign In with Google
+            <button id="google-sign-in-button" class="mt-4 flex items-center justify-center gap-2 w-full px-6 py-3 text-white font-bold rounded-lg shadow-lg transition-all duration-300 ease-in-out">
+            <i class="fab fa-google"></i> Sign In with Google
             </button>
+
             <button id="close-auth-modal" class="absolute top-2 right-2 text-gray-400 hover:text-white text-2xl font-bold" data-click-sound="buttonClick">&times;</button>
         </div>
     </div>
