--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <!-- Content (footer is outside this container so it never overlaps) -->
     <div class="content-container flex flex-col items-center p-4">
         <header class="text-center">
-            <h1 class="text-5xl md:text-7xl font-black uppercase tracking-wider title-shadow text-white">
+            <h1 class="text-3xl sm:text-5xl md:text-7xl font-black uppercase tracking-wider title-shadow text-white">
                 Game Hub
             </h1>
-            <p class="mt-4 max-w-2xl text-lg md:text-xl subtitle-shadow text-white">
+            <p class="mt-4 max-w-2xl text-base sm:text-lg md:text-xl subtitle-shadow text-white">
                 Welcome to my collection of simple and fun browser games. Select a game below to get started!
             </p>
         </header>
